# tdr2024

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: level1.tmx
src/: dashboard.rs  editor.rs  geometry.rs  main.rs  mapping.rs  menu.rs  objectmap.rs  physics.rs  tilemap.rs  util.rs
src/assets/: kenney_racing-pack  level1.tmx  level2.tmx  mod.rs
src/helpers/: mod.rs  tiled.rs
tiled/: asphalt_road.tsx  dirt.tsx  dirt_road.tsx  grass.tsx  level1.tmx  level2.tmx  objects.tsx  racer.tiled-session  spritesheet_tiles.tsx  vehicles.tsx
