[package]
name = "bevy-racer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.12.0"
bevy_editor_pls = "0.6.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
tiled = "0.11.2"
thiserror = "1.0.52"
itertools = "0.12.0"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

[profile.dev]
opt-level = 1

# Enable more aggressive optimizations for all imported crates
[profile.dev.package."*"]
opt-level = 2
