[package]
name = "tdr2024"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1" }
bevy_ecs_tilemap = "0.12.0"
bevy_editor_pls = { version = "0.6.0", optional = true }
image = { version = "0.24.7", default-features = false, features = ["png"] }
tiled = "0.11.2"
thiserror = "1.0.52"
itertools = "0.12.0"
slicetools = "0.3.0"
clap = { version = "4.4.16", features = ["derive"] }
smallvec = "1.13.1"

[features]
editor = ["dep:bevy_editor_pls"]

[profile.dev]
opt-level = 1

# Enable more aggressive optimizations for all imported crates
[profile.dev.package."*"]
opt-level = 's'

[profile.release]
lto = "thin"
opt-level = 's'
